@@ -28,6 +28,7 @@
 #include <wx/wx.h>
 
 #include "buffer.hpp"
+#include "ByteRangeSet.hpp"
 #include "NestedOffsetLengthMap.hpp"
 #include "util.hpp"
 
@@ -92,6 +93,7 @@ namespace REHex {
 			std::string get_title();
 			std::string get_filename();
 			bool is_dirty();
+			bool is_byte_dirty(off_t offset) const;
 			
 			off_t get_cursor_position() const;
 			CursorState get_cursor_state() const;
@@ -126,12 +128,17 @@ namespace REHex {
 				CursorState old_cursor_state;
 				NestedOffsetLengthMap<Comment> old_comments;
 				NestedOffsetLengthMap<int> old_highlights;
+				
+				bool old_dirty;
+				ByteRangeSet old_dirty_bytes;
 			};
 			
 			Buffer *buffer;
 			std::string filename;
 			
 			bool dirty;
+			ByteRangeSet dirty_bytes;
+			
 			void set_dirty(bool dirty);
 			
 			NestedOffsetLengthMap<Comment> comments;
